--- a/distil_prep.ipynb
+++ b/distil_prep.ipynb
@@ -93,7 +93,7 @@
      "text": [
       "`torch_dtype` is deprecated! Use `dtype` instead!\n",
       "The `load_in_4bit` and `load_in_8bit` arguments are deprecated and will be removed in the future versions. Please, pass a `BitsAndBytesConfig` object in `quantization_config` argument instead.\n",
-      "Loading checkpoint shards: 100%|██████████| 5/5 [00:10<00:00,  2.19s/it]\n"
+      "Loading checkpoint shards: 100%|██████████| 5/5 [00:10<00:00,  2.17s/it]\n"
      ]
     }
    ],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "669337c3",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "affee3ba",
    "metadata": {},
    "outputs": [],
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "875733aa",
    "metadata": {},
    "outputs": [
@@ -260,6 +260,110 @@
     "with torch.no_grad():\n",
     "    outputs = model_0_6b.generate(**inputs, max_new_tokens=200)\n",
     "print(tokenizer_0_6b.decode(outputs[0], skip_special_tokens=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "7cdeddaf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Model Layers ---\n",
+      "模型名称: Qwen/Qwen3-8B-Base\n",
+      "Transformer 层数: 36\n",
+      "Qwen3ForCausalLM(\n",
+      "  (model): Qwen3Model(\n",
+      "    (embed_tokens): Embedding(151936, 4096)\n",
+      "    (layers): ModuleList(\n",
+      "      (0-35): 36 x Qwen3DecoderLayer(\n",
+      "        (self_attn): Qwen3Attention(\n",
+      "          (q_proj): Linear8bitLt(in_features=4096, out_features=4096, bias=False)\n",
+      "          (k_proj): Linear8bitLt(in_features=4096, out_features=1024, bias=False)\n",
+      "          (v_proj): Linear8bitLt(in_features=4096, out_features=1024, bias=False)\n",
+      "          (o_proj): Linear8bitLt(in_features=4096, out_features=4096, bias=False)\n",
+      "          (q_norm): Qwen3RMSNorm((128,), eps=1e-06)\n",
+      "          (k_norm): Qwen3RMSNorm((128,), eps=1e-06)\n",
+      "        )\n",
+      "        (mlp): Qwen3MLP(\n",
+      "          (gate_proj): Linear8bitLt(in_features=4096, out_features=12288, bias=False)\n",
+      "          (up_proj): Linear8bitLt(in_features=4096, out_features=12288, bias=False)\n",
+      "          (down_proj): Linear8bitLt(in_features=12288, out_features=4096, bias=False)\n",
+      "          (act_fn): SiLUActivation()\n",
+      "        )\n",
+      "        (input_layernorm): Qwen3RMSNorm((4096,), eps=1e-06)\n",
+      "        (post_attention_layernorm): Qwen3RMSNorm((4096,), eps=1e-06)\n",
+      "      )\n",
+      "    )\n",
+      "    (norm): Qwen3RMSNorm((4096,), eps=1e-06)\n",
+      "    (rotary_emb): Qwen3RotaryEmbedding()\n",
+      "  )\n",
+      "  (lm_head): Linear(in_features=4096, out_features=151936, bias=False)\n",
+      ")\n",
+      "--------------------\n",
+      "--- Model Layers ---\n",
+      "模型名称: Qwen/Qwen3-0.6B-Base\n",
+      "Transformer 层数: 28\n",
+      "Qwen3ForCausalLM(\n",
+      "  (model): Qwen3Model(\n",
+      "    (embed_tokens): Embedding(151936, 1024)\n",
+      "    (layers): ModuleList(\n",
+      "      (0-27): 28 x Qwen3DecoderLayer(\n",
+      "        (self_attn): Qwen3Attention(\n",
+      "          (q_proj): Linear(in_features=1024, out_features=2048, bias=False)\n",
+      "          (k_proj): Linear(in_features=1024, out_features=1024, bias=False)\n",
+      "          (v_proj): Linear(in_features=1024, out_features=1024, bias=False)\n",
+      "          (o_proj): Linear(in_features=2048, out_features=1024, bias=False)\n",
+      "          (q_norm): Qwen3RMSNorm((128,), eps=1e-06)\n",
+      "          (k_norm): Qwen3RMSNorm((128,), eps=1e-06)\n",
+      "        )\n",
+      "        (mlp): Qwen3MLP(\n",
+      "          (gate_proj): Linear(in_features=1024, out_features=3072, bias=False)\n",
+      "          (up_proj): Linear(in_features=1024, out_features=3072, bias=False)\n",
+      "          (down_proj): Linear(in_features=3072, out_features=1024, bias=False)\n",
+      "          (act_fn): SiLUActivation()\n",
+      "        )\n",
+      "        (input_layernorm): Qwen3RMSNorm((1024,), eps=1e-06)\n",
+      "        (post_attention_layernorm): Qwen3RMSNorm((1024,), eps=1e-06)\n",
+      "      )\n",
+      "    )\n",
+      "    (norm): Qwen3RMSNorm((1024,), eps=1e-06)\n",
+      "    (rotary_emb): Qwen3RotaryEmbedding()\n",
+      "  )\n",
+      "  (lm_head): Linear(in_features=1024, out_features=151936, bias=False)\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import AutoConfig\n",
+    "\n",
+    "def print_model_layers(model_name):\n",
+    "    try:\n",
+    "        config = AutoConfig.from_pretrained(\n",
+    "            model_name,\n",
+    "            trust_remote_code=True\n",
+    "        )\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error loading config for {model_name}: {e}\")\n",
+    "        return\n",
+    "\n",
+    "    if hasattr(config, \"num_hidden_layers\"):\n",
+    "        num_layers = config.num_hidden_layers\n",
+    "        print(\"--- Model Layers ---\")\n",
+    "        print(f\"模型名称: {model_name}\")\n",
+    "        print(f\"Transformer 层数: {num_layers}\")\n",
+    "    else:\n",
+    "        print(f\"在 {model_name} 的配置中未找到 'num_hidden_layers' 属性。\")\n",
+    "\n",
+    "print_model_layers(QWEN3_8B_MODEL_NAME)\n",
+    "print(model_8b)\n",
+    "print(\"-\" * 20)\n",
+    "print_model_layers(QWEN3_0_6B_MODEL_NAME)\n",
+    "print(model_0_6b)\n"
    ]
   }
  ],
