--- a/OPDF/Qwen3-base/distil_KD_MPO.ipynb
+++ b/OPDF/Qwen3-base/distil_KD_MPO.ipynb
@@ -49,7 +49,7 @@
    "source": [
     "from huggingface_hub import login\n",
     "\n",
-    "login(token=\"your_huggingface_token_here\")  # 替换为你的 Hugging Face 访问令牌"
+    "login(token=\"\")  # 替换为你的 Hugging Face 访问令牌"
    ]
   },
   {
