mpo full result and vanila KD ongoing

--- a/OPDF/Qwen3-base/distil_KD_n0_MPO.ipynb
+++ b/OPDF/Qwen3-base/distil_KD_n0_MPO.ipynb
@@ -49,7 +49,7 @@
    "source": [
     "from huggingface_hub import login\n",
     "\n",
-    "login(token=\"your_huggingface_token_here\")  # 替换为你的 Hugging Face 访问令牌"
+    "login(token=\"\")  # 替换为你的 Hugging Face 访问令牌"
    ]
   },
   {
@@ -101,10 +101,11 @@
     "import torch\n",
     "from datasets import load_dataset\n",
     "\n",
-    "dataset = load_dataset(\"Nan-Do/code-search-net-python\", split=\"train\").select(range(1000)) # 选择部分样本用于蒸馏\n",
-    "# dataset = load_dataset(\"Nan-Do/code-search-net-python\", split=\"train\").select(range(10000,11000)) # 1000 样本用于测试 PPL\n",
+    "dataset = load_dataset(\"Nan-Do/code-search-net-python\", split=\"train\").select(range(20000)) # 选择部分样本用于蒸馏 20000\n",
+    "dataset2 = load_dataset(\"Nan-Do/code-search-net-python\", split=\"train\").select(range(20001,21001)) # 1000 样本用于测试 PPL\n",
     "\n",
-    "device = torch.device(\"cuda:1\")\n",
+    "device = torch.device(\"cuda:0\")\n",
+    "\n",
     "\n",
     "# student_device = torch.device(\"cuda:0\")\n",
     "# teacher_device = torch.device(\"cuda:0\")\n",
@@ -128,7 +129,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cuda:1\n"
+      "cuda:0\n"
      ]
     }
    ],
@@ -175,14 +176,14 @@
      "text": [
       "  0%|          | 0/100 [00:00<?, ?it/s]/home/zhaohongzhicai/miniconda3/envs/qwen310/lib/python3.10/site-packages/bitsandbytes/autograd/_functions.py:181: UserWarning: MatMul8bitLt: inputs will be cast from torch.bfloat16 to float16 during quantization\n",
       "  warnings.warn(f\"MatMul8bitLt: inputs will be cast from {A.dtype} to float16 during quantization\")\n",
-      "100%|██████████| 100/100 [00:14<00:00,  6.82it/s]"
+      "100%|██████████| 100/100 [00:13<00:00,  7.49it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.91012533903122\n"
+      "9.09707392692566\n"
      ]
     },
     {
@@ -209,7 +210,7 @@
     "        total_ppl += torch.exp(loss).item()\n",
     "    return total_ppl / num_samples\n",
     "if RUNPPL:\n",
-    "    print(compute_ppl_batch(model_1_5b, tokenizer, dataset, target_gpu=device))"
+    "    print(compute_ppl_batch(model_1_5b, tokenizer, dataset2, target_gpu=device))"
    ]
   },
   {
@@ -267,14 +268,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:05<00:00, 19.97it/s]"
+      "100%|██████████| 100/100 [00:03<00:00, 30.00it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.317819724082947\n"
+      "10.877563061714172\n"
      ]
     },
     {
@@ -287,7 +288,7 @@
    ],
    "source": [
     "if RUNPPL:\n",
-    "    print(compute_ppl_batch(model_0_5b, tokenizer, dataset,target_gpu=device))"
+    "    print(compute_ppl_batch(model_0_5b, tokenizer, dataset2,target_gpu=device))"
    ]
   },
   {
@@ -406,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "7329bfae",
    "metadata": {},
    "outputs": [
@@ -414,31 +415,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:04<00:00, 23.44it/s]oss=18.6, ce=1.36, kd=30.7, feat=1.9, lr=3.1e-6]  \n"
+      " 43%|████▎     | 267/625 [39:05<52:29,  8.80s/it, loss=17, ce=1.26, kd=30.5, feat=0.482, lr=6.82e-6]     "
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6.2890763449668885\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "('distilled_qwen2_0_5b_kd_modular/tokenizer_config.json',\n",
-       " 'distilled_qwen2_0_5b_kd_modular/special_tokens_map.json',\n",
-       " 'distilled_qwen2_0_5b_kd_modular/chat_template.jinja',\n",
-       " 'distilled_qwen2_0_5b_kd_modular/vocab.json',\n",
-       " 'distilled_qwen2_0_5b_kd_modular/merges.txt',\n",
-       " 'distilled_qwen2_0_5b_kd_modular/added_tokens.json',\n",
-       " 'distilled_qwen2_0_5b_kd_modular/tokenizer.json')"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -768,14 +746,14 @@
     "dataset2 = load_dataset(\"Nan-Do/code-search-net-python\", split=\"train\").select(range(10000,11000)) # 1000 样本用于测试 PPL\n",
     "print(compute_ppl_batch(model_0_5b, tokenizer, dataset2,target_gpu=device))\n",
     "\n",
-    "save_dir = \"distilled_qwen2_0_5b_kd_modular\"\n",
-    "student.save_pretrained(save_dir)\n",
-    "tokenizer.save_pretrained(save_dir)"
+    "# save_dir = \"distilled_qwen2_0_5b_kd_modular\"\n",
+    "# student.save_pretrained(save_dir)\n",
+    "# tokenizer.save_pretrained(save_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "76d4532b",
    "metadata": {},
    "outputs": [
