--- a/OPDF/Qwen3-base/distil_KD_MPO.ipynb
+++ b/OPDF/Qwen3-base/distil_KD_MPO.ipynb
@@ -28,7 +28,7 @@
     "CLEANTEACHER = False\n",
     "LOADRUNPPL = False\n",
     "ONLYTRAINMPO = True\n",
-    "SAVEMODEL = False\n",
+    "SAVEMODEL = True\n",
     "import os\n",
     "os.environ[\"TOKENIZERS_PARALLELISM\"] = \"false\"\n"
    ]
@@ -103,7 +103,7 @@
     "import torch\n",
     "from datasets import load_dataset\n",
     "\n",
-    "dataset = load_dataset(\"Nan-Do/code-search-net-python\", split=\"train\").select(range(3000)) # 选择部分样本用于蒸馏 20000\n",
+    "dataset = load_dataset(\"Nan-Do/code-search-net-python\", split=\"train\").select(range(20000)) # 选择部分样本用于蒸馏 20000\n",
     "dataset2 = load_dataset(\"Nan-Do/code-search-net-python\", split=\"train\").select(range(20001,21001)) # 1000 样本用于测试 PPL\n",
     "\n",
     "device = torch.device(\"cuda:1\")\n",
@@ -177,7 +177,7 @@
      "text": [
       "  0%|          | 0/100 [00:00<?, ?it/s]/home/zhaohongzhicai/miniconda3/envs/qwen310/lib/python3.10/site-packages/bitsandbytes/autograd/_functions.py:181: UserWarning: MatMul8bitLt: inputs will be cast from torch.bfloat16 to float16 during quantization\n",
       "  warnings.warn(f\"MatMul8bitLt: inputs will be cast from {A.dtype} to float16 during quantization\")\n",
-      "100%|██████████| 100/100 [00:13<00:00,  7.62it/s]"
+      "100%|██████████| 100/100 [00:13<00:00,  7.61it/s]"
      ]
     },
     {
@@ -269,7 +269,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:03<00:00, 30.62it/s]"
+      "100%|██████████| 100/100 [00:03<00:00, 30.80it/s]"
      ]
     },
     {
@@ -294,15 +294,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "c250dd87",
    "metadata": {},
    "outputs": [],
    "source": [
     "# prompt = \"Write a short Python function to compute Fibonacci numbers.\"\n",
-    "# inputs = tokenizer_0_6b(prompt, return_tensors=\"pt\").to(model_0_6b.device)\n",
+    "# inputs = tokenizer(prompt, return_tensors=\"pt\").to(model_0_6b.device)\n",
     "# with torch.no_grad():\n",
-    "#     outputs = model_0_6b.generate(**inputs, max_new_tokens=200)\n",
+    "#     outputs = student.generate(**inputs, max_new_tokens=200)\n",
     "# print(tokenizer_0_6b.decode(outputs[0], skip_special_tokens=True))"
    ]
   },
@@ -587,7 +587,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:03<00:00, 30.53it/s]\n"
+      "100%|██████████| 100/100 [00:03<00:00, 30.88it/s]\n"
      ]
     },
     {
@@ -609,14 +609,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:03<00:00, 29.17it/s]oss=19.6, ce=2.04, kd=33.3, feat=0.853, lr=4.65e-5]\n"
+      "100%|██████████| 100/100 [00:03<00:00, 29.23it/s]t, loss=19.3, ce=1.76, kd=34.7, feat=0.248, lr=0]       \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final PPL before merging: 10.69804741382599\n",
+      "Final PPL before merging: 8.042026400566101\n",
       ">>> 开始将 MPO 层合并回标准 Linear 层...\n",
       "  - Merging Layer 22 MLP gate_proj...\n",
       "  - Merging Layer 22 MLP up_proj...\n",
@@ -631,14 +631,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:03<00:00, 29.89it/s]"
+      "100%|██████████| 100/100 [00:03<00:00, 29.86it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final PPL after merging: 10.698048520088197\n"
+      "Final PPL after merging: 8.042026131153106\n"
      ]
     },
     {
@@ -1051,7 +1051,7 @@
    "outputs": [],
    "source": [
     "if SAVEMODEL:\n",
-    "    save_dir = \"distilled_qwen2_0_5b_mmp_only_kd_modular\"\n",
+    "    save_dir = \"distilled_qwen2_0_5b_mpo_kd_modular\"\n",
     "    student.save_pretrained(save_dir)\n",
     "    tokenizer.save_pretrained(save_dir)"
    ]
@@ -1066,7 +1066,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "93\n"
+      "625\n"
      ]
     }
    ],
@@ -1138,6 +1138,43 @@
    "outputs": [],
    "source": [
     "# loss = alpha_kd * loss_kd + alpha_feat * feat_loss + (1 - alpha_kd - alpha_feat) * loss_lm\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "d5ae0f49",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting `pad_token_id` to `eos_token_id`:151643 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Write a short Python function to compute Fibonacci numbers. def fibonacci(n):\n",
+      "    if n < 0:\n",
+      "        print(\"Incorrect input\")\n",
+      "    elif n == 1:\n",
+      "        return 0\n",
+      "    elif n == 2:\n",
+      "        return 1\n",
+      "    else:\n",
+      "        return fibonacci(n-1) + fibonacci(n-2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = \"Write a short Python function to compute Fibonacci numbers.\"\n",
+    "inputs = tokenizer(prompt, return_tensors=\"pt\").to(student.device)\n",
+    "with torch.no_grad():\n",
+    "    outputs = student.generate(**inputs, max_new_tokens=200)\n",
+    "print(tokenizer.decode(outputs[0], skip_special_tokens=True))"
    ]
   }
  ],
