got the final result

--- a/OPDF/Qwen3-base/distil_KD_MPO.ipynb
+++ b/OPDF/Qwen3-base/distil_KD_MPO.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "4ec72106",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
     "RUNPPL = True\n",
     "CLEANTEACHER = False\n",
     "LOADRUNPPL = False\n",
-    "ONLYTRAINMPO = True\n",
+    "ONLYTRAINMPO = False\n",
     "SAVEMODEL = True\n",
     "import os\n",
     "os.environ[\"TOKENIZERS_PARALLELISM\"] = \"false\"\n"
@@ -38,16 +38,7 @@
    "execution_count": null,
    "id": "530591a5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/zhaohongzhicai/miniconda3/envs/qwen310/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from huggingface_hub import login\n",
     "\n",
@@ -56,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "2a05dedc",
    "metadata": {},
    "outputs": [
@@ -84,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "16630793",
    "metadata": {},
    "outputs": [
@@ -115,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "615b4327",
    "metadata": {},
    "outputs": [
@@ -167,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "669337c3",
    "metadata": {},
    "outputs": [
@@ -177,7 +168,7 @@
      "text": [
       "  0%|          | 0/100 [00:00<?, ?it/s]/home/zhaohongzhicai/miniconda3/envs/qwen310/lib/python3.10/site-packages/bitsandbytes/autograd/_functions.py:181: UserWarning: MatMul8bitLt: inputs will be cast from torch.bfloat16 to float16 during quantization\n",
       "  warnings.warn(f\"MatMul8bitLt: inputs will be cast from {A.dtype} to float16 during quantization\")\n",
-      "100%|██████████| 100/100 [00:13<00:00,  7.61it/s]"
+      "100%|██████████| 100/100 [00:13<00:00,  7.65it/s]"
      ]
     },
     {
@@ -224,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "7758b5e8",
    "metadata": {},
    "outputs": [],
@@ -239,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "affee3ba",
    "metadata": {},
    "outputs": [],
@@ -261,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "875733aa",
    "metadata": {},
    "outputs": [
@@ -269,7 +260,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:03<00:00, 30.80it/s]"
+      "100%|██████████| 100/100 [00:03<00:00, 30.83it/s]"
      ]
     },
     {
@@ -294,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "c250dd87",
    "metadata": {},
    "outputs": [],
@@ -308,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "7cdeddaf",
    "metadata": {},
    "outputs": [
@@ -408,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "24259e27",
    "metadata": {},
    "outputs": [],
@@ -557,7 +548,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "id": "c51159bb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "7329bfae",
    "metadata": {},
    "outputs": [
@@ -587,36 +586,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:03<00:00, 30.88it/s]\n"
+      "100%|██████████| 100/100 [00:03<00:00, 30.84it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ">>> Initial PPL: 10.87755845785141\n",
-      "Unlocked MPO layer: model.layers.22.mlp.gate_proj\n",
-      "Unlocked MPO layer: model.layers.22.mlp.up_proj\n",
-      "Unlocked MPO layer: model.layers.22.mlp.down_proj\n",
-      "Unlocked MPO layer: model.layers.23.mlp.gate_proj\n",
-      "Unlocked MPO layer: model.layers.23.mlp.up_proj\n",
-      "Unlocked MPO layer: model.layers.23.mlp.down_proj\n",
-      "Trainable Params: 46.45M / 514.33M\n",
-      "Ratio: 9.03%\n"
+      ">>> Initial PPL: 10.87755845785141\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:03<00:00, 29.23it/s]t, loss=19.3, ce=1.76, kd=34.7, feat=0.248, lr=0]       \n"
+      "100%|██████████| 100/100 [00:03<00:00, 28.66it/s]t, loss=18.9, ce=1.42, kd=34.3, feat=0.352, lr=0]       \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final PPL before merging: 8.042026400566101\n",
+      "Final PPL before merging: 7.10141250371933\n",
       ">>> 开始将 MPO 层合并回标准 Linear 层...\n",
       "  - Merging Layer 22 MLP gate_proj...\n",
       "  - Merging Layer 22 MLP up_proj...\n",
@@ -631,14 +622,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:03<00:00, 29.86it/s]"
+      "100%|██████████| 100/100 [00:03<00:00, 29.32it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final PPL after merging: 8.042026131153106\n"
+      "Final PPL after merging: 7.101413426399231\n"
      ]
     },
     {
@@ -1045,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "69c40f37",
    "metadata": {},
    "outputs": [],
@@ -1058,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "76d4532b",
    "metadata": {},
    "outputs": [
@@ -1076,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "592577e2",
    "metadata": {},
    "outputs": [],
@@ -1132,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "a0b0f007",
    "metadata": {},
    "outputs": [],
@@ -1142,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "d5ae0f49",
    "metadata": {},
    "outputs": [
@@ -1158,11 +1149,10 @@
      "output_type": "stream",
      "text": [
       "Write a short Python function to compute Fibonacci numbers. def fibonacci(n):\n",
-      "    if n < 0:\n",
-      "        print(\"Incorrect input\")\n",
-      "    elif n == 1:\n",
+      "    \"\"\"Computes the nth Fibonacci number using a recursive approach.\"\"\"\n",
+      "    if n == 0:\n",
       "        return 0\n",
-      "    elif n == 2:\n",
+      "    elif n == 1:\n",
       "        return 1\n",
       "    else:\n",
       "        return fibonacci(n-1) + fibonacci(n-2)\n"
