--- a/OPDF/Qwen3-base/distil_KD_n0_MPO.ipynb
+++ b/OPDF/Qwen3-base/distil_KD_n0_MPO.ipynb
@@ -19,14 +19,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "4ec72106",
    "metadata": {},
    "outputs": [],
    "source": [
     "RUNPPL = True\n",
     "CLEANTEACHER = False\n",
-    "LOADRUNPPL = False\n",
+    "LOADRUNPPL = True\n",
     "import os\n",
     "os.environ[\"TOKENIZERS_PARALLELISM\"] = \"false\"\n"
    ]
@@ -166,34 +166,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "669337c3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/100 [00:00<?, ?it/s]/home/zhaohongzhicai/miniconda3/envs/qwen310/lib/python3.10/site-packages/bitsandbytes/autograd/_functions.py:181: UserWarning: MatMul8bitLt: inputs will be cast from torch.bfloat16 to float16 during quantization\n",
-      "  warnings.warn(f\"MatMul8bitLt: inputs will be cast from {A.dtype} to float16 during quantization\")\n",
-      "100%|██████████| 100/100 [00:13<00:00,  7.49it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9.09707392692566\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tqdm import tqdm\n",
     "import torch\n",
@@ -415,7 +391,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 43%|████▎     | 267/625 [39:05<52:29,  8.80s/it, loss=17, ce=1.26, kd=30.5, feat=0.482, lr=6.82e-6]     "
+      "100%|██████████| 100/100 [00:04<00:00, 23.98it/s]t, loss=20.2, ce=2.68, kd=34.1, feat=0.437, lr=0]       "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.995396363735199\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -743,7 +733,7 @@
     "# =====================================================\n",
     "# 保存蒸馏后的 MPO 学生\n",
     "# =====================================================\n",
-    "dataset2 = load_dataset(\"Nan-Do/code-search-net-python\", split=\"train\").select(range(10000,11000)) # 1000 样本用于测试 PPL\n",
+    "\n",
     "print(compute_ppl_batch(model_0_5b, tokenizer, dataset2,target_gpu=device))\n",
     "\n",
     "# save_dir = \"distilled_qwen2_0_5b_kd_modular\"\n",
@@ -753,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "76d4532b",
    "metadata": {},
    "outputs": [
@@ -761,7 +751,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "31\n"
+      "625\n"
      ]
     }
    ],
@@ -771,10 +761,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "592577e2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved files: ['distilled_qwen2_0_5b_mmp_kd_modular/merges.txt', 'distilled_qwen2_0_5b_mmp_kd_modular/special_tokens_map.json', 'distilled_qwen2_0_5b_mmp_kd_modular/generation_config.json', 'distilled_qwen2_0_5b_mmp_kd_modular/vocab.json', 'distilled_qwen2_0_5b_mmp_kd_modular/added_tokens.json', 'distilled_qwen2_0_5b_mmp_kd_modular/tokenizer_config.json', 'distilled_qwen2_0_5b_mmp_kd_modular/tokenizer.json', 'distilled_qwen2_0_5b_mmp_kd_modular/model.safetensors', 'distilled_qwen2_0_5b_mmp_kd_modular/chat_template.jinja', 'distilled_qwen2_0_5b_mmp_kd_modular/config.json']\n",
+      "Found safetensors files: ['distilled_qwen2_0_5b_mmp_kd_modular/model.safetensors']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:03<00:00, 29.91it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.208931834697723\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "if LOADRUNPPL:\n",
     "        \n",
@@ -783,7 +803,7 @@
     "    import torch\n",
     "    from datasets import load_dataset\n",
     "\n",
-    "    save_dir = \"distilled_qwen2_0_5b_kd_modular\"  # 替换为你的保存目录\n",
+    "    save_dir = \"distilled_qwen2_0_5b_mmp_kd_modular\"  # 替换为你的保存目录\n",
     "\n",
     "    # 1) Inspect the save directory for safetensors/pytorch files\n",
     "    files = glob.glob(os.path.join(save_dir, \"*\"))\n",
@@ -820,336 +840,14 @@
     "            device_map=\"auto\",\n",
     "            low_cpu_mem_usage=True\n",
     "        )\n",
-    "    dataset = load_dataset(\"Nan-Do/code-search-net-python\", split=\"train\").select(range(10000,11000)) # 1000 样本用于测试 PPL\n",
-    "    print(compute_ppl_batch(model_distilled, tokenizer_distilled, dataset))\n",
+    "\n",
+    "    print(compute_ppl_batch(model_distilled, tokenizer_distilled, dataset2))\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b7e5b226",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import torch\n",
-    "# from torch import nn\n",
-    "# from torch.utils.data import DataLoader\n",
-    "# from datasets import load_dataset\n",
-    "# from transformers import DataCollatorForLanguageModeling, get_scheduler\n",
-    "# from dataclasses import dataclass\n",
-    "# from tqdm.auto import tqdm\n",
-    "\n",
-    "# # =====================================================\n",
-    "# # 配置：蒸馏 loss 的结构\n",
-    "# # =====================================================\n",
-    "\n",
-    "# @dataclass\n",
-    "# class DistillConfig:\n",
-    "#     temperature: float = 2.0\n",
-    "#     alpha_kd: float = 0.5       # logits KD 权重 λ_kd\n",
-    "#     alpha_feat: float = 0.1     # hidden feature 对齐权重 λ_feat\n",
-    "#     alpha_param: float = 0.0    # 参数重构正则权重 λ_param（先关掉）\n",
-    "#     use_feat_loss: bool = True  # 是否使用特征蒸馏（只对齐最后一层）\n",
-    "#     use_param_loss: bool = False  # 是否使用参数正则（权重对齐）\n",
-    "\n",
-    "# distill_cfg = DistillConfig(\n",
-    "#     temperature=2.0,\n",
-    "#     alpha_kd=0.5,\n",
-    "#     alpha_feat=0.1,\n",
-    "#     alpha_param=0.0,          # 默认不打开参数正则，有需要再开\n",
-    "#     use_feat_loss=False,\n",
-    "#     use_param_loss=False,\n",
-    "# )\n",
-    "\n",
-    "# # =====================================================\n",
-    "# # 模型 & 设备：teacher 多卡，student 只在 cuda:1\n",
-    "# # =====================================================\n",
-    "\n",
-    "# teacher = model_1_5b               # 假设已经是 int8 + device_map={0,1}\n",
-    "# student = model_0_5b             # MPO 学生模型（Qwen 0.6B MPO 版）\n",
-    "\n",
-    "# # teacher = teacher.to(teacher_device)\n",
-    "# # student = student.to(student_device)\n",
-    "# student_dtype = student.dtype\n",
-    "\n",
-    "\n",
-    "# # teacher 不更新\n",
-    "# teacher.eval()\n",
-    "# for p in teacher.parameters():\n",
-    "#     p.requires_grad_(False)\n",
-    "\n",
-    "# # =====================================================\n",
-    "# # 数据集 & DataLoader（跟你之前的写法基本一致）\n",
-    "# # =====================================================\n",
-    "\n",
-    "# max_len = 256\n",
-    "# batch_size = 1\n",
-    "# num_epochs = 1\n",
-    "# lr = 1e-6\n",
-    "\n",
-    "# raw_train = dataset\n",
-    "# def tokenize_fn(batch):\n",
-    "#     out = tokenizer(\n",
-    "#         batch[\"code\"],\n",
-    "#         truncation=True,\n",
-    "#         max_length=max_len,\n",
-    "#         padding=\"max_length\",\n",
-    "#         return_attention_mask=True,\n",
-    "#     )\n",
-    "#     # 非 padding token 才参与 CE\n",
-    "#     out[\"labels\"] = [\n",
-    "#         [tid if m == 1 else -100 for tid, m in zip(ids, mask)]\n",
-    "#         for ids, mask in zip(out[\"input_ids\"], out[\"attention_mask\"])\n",
-    "#     ]\n",
-    "#     return out\n",
-    "\n",
-    "# train_ds = raw_train.map(\n",
-    "#     tokenize_fn,\n",
-    "#     batched=True,\n",
-    "#     remove_columns=raw_train.column_names,\n",
-    "# )\n",
-    "# train_ds.set_format(\n",
-    "#     type=\"torch\",\n",
-    "#     columns=[\"input_ids\", \"attention_mask\", \"labels\"],\n",
-    "# )\n",
-    "\n",
-    "# collator = DataCollatorForLanguageModeling(tokenizer=tokenizer, mlm=False)\n",
-    "# train_loader = DataLoader(\n",
-    "#     train_ds,\n",
-    "#     batch_size=batch_size,\n",
-    "#     shuffle=True,\n",
-    "#     collate_fn=collator,\n",
-    "#     num_workers=0,\n",
-    "#     pin_memory=True,\n",
-    "# )\n",
-    "\n",
-    "# # =====================================================\n",
-    "# # 特征投影（teacher hidden -> student hidden）\n",
-    "# # 这里只对齐最后一层 hidden，避免多卡疯狂搬运\n",
-    "# # =====================================================\n",
-    "\n",
-    "# teacher_hidden = teacher.config.hidden_size\n",
-    "# student_hidden = student.config.hidden_size\n",
-    "\n",
-    "# if teacher_hidden != student_hidden:\n",
-    "#     projector = nn.Linear(\n",
-    "#         teacher_hidden,\n",
-    "#         student_hidden,\n",
-    "#         bias=False,\n",
-    "#         device=student_device,\n",
-    "#         dtype=student_dtype,\n",
-    "#     )\n",
-    "# else:\n",
-    "#     projector = nn.Identity().to(student_device)\n",
-    "\n",
-    "# # =====================================================\n",
-    "# # 参数正则：只针对一小部分层（示例：lm_head）\n",
-    "# # 先构造一个 param_pairs 列表，用于 L_param\n",
-    "# # =====================================================\n",
-    "\n",
-    "# param_pairs = []\n",
-    "# if distill_cfg.use_param_loss and distill_cfg.alpha_param > 0.0:\n",
-    "#     # 示例：对齐 lm_head 权重（按你模型的真实名字来改）\n",
-    "#     # 注意：teacher 的权重要搬到 student_device 上，且一般不需要梯度\n",
-    "#     with torch.no_grad():\n",
-    "#         t_lm_head_w = teacher.lm_head.weight.to(student_device, dtype=student_dtype)\n",
-    "#     param_pairs.append((student.lm_head.weight, t_lm_head_w))\n",
-    "\n",
-    "# # =====================================================\n",
-    "# # 定义各个 loss 模块\n",
-    "# # =====================================================\n",
-    "\n",
-    "# mse = nn.MSELoss()\n",
-    "\n",
-    "# def compute_ce_loss(student_output):\n",
-    "#     \"\"\"\n",
-    "#     L_CE：student 对真实 token 的交叉熵。\n",
-    "#     HF 的 causal LM 模型在 forward 时已经返回了 loss。\n",
-    "#     \"\"\"\n",
-    "#     return student_output.loss\n",
-    "\n",
-    "# def compute_kd_loss(student_logits, teacher_logits, T):\n",
-    "#     \"\"\"\n",
-    "#     L_KD：logits 蒸馏（Hinton 经典 KD 写法）。\n",
-    "#     \"\"\"\n",
-    "#     s = (student_logits / T).log_softmax(dim=-1)\n",
-    "#     t = (teacher_logits / T).softmax(dim=-1)\n",
-    "#     kd = torch.mean(torch.sum(-t * s, dim=-1)) * (T * T)\n",
-    "#     return kd\n",
-    "\n",
-    "# def compute_feat_loss(s_last_hidden, t_last_hidden_projected, attention_mask=None):\n",
-    "#     \"\"\"\n",
-    "#     L_feat：最后一层 hidden 对齐。\n",
-    "#     - 可以选择对所有位置做 MSE，也可以只对非 padding 位置。\n",
-    "#     \"\"\"\n",
-    "#     if attention_mask is None:\n",
-    "#         return mse(s_last_hidden, t_last_hidden_projected)\n",
-    "\n",
-    "#     # 只对非 padding 位置做 MSE\n",
-    "#     # attention_mask: [B, L]，1 是有效 token\n",
-    "#     mask = attention_mask.unsqueeze(-1).to(s_last_hidden.dtype)  # [B, L, 1]\n",
-    "#     s_masked = s_last_hidden * mask\n",
-    "#     t_masked = t_last_hidden_projected * mask\n",
-    "#     # 归一化到有效 token 的平均\n",
-    "#     denom = mask.sum().clamp_min(1.0)\n",
-    "#     return ((s_masked - t_masked) ** 2).sum() / denom\n",
-    "\n",
-    "# def compute_param_loss(param_pairs):\n",
-    "#     \"\"\"\n",
-    "#     L_param：参数正则（权重对齐）。\n",
-    "#     param_pairs: List[(W_student, W_teacher_fixed)]\n",
-    "#     通常只选很少的一两层做（例如 lm_head 或某几层 MPO）。\n",
-    "#     \"\"\"\n",
-    "#     if not param_pairs:\n",
-    "#         return torch.tensor(0.0, device=student_device)\n",
-    "\n",
-    "#     loss = torch.tensor(0.0, device=student_device)\n",
-    "#     for w_s, w_t in param_pairs:\n",
-    "#         loss = loss + ((w_s - w_t) ** 2).mean()\n",
-    "#     return loss\n",
-    "\n",
-    "# # =====================================================\n",
-    "# # 优化器 & Scheduler\n",
-    "# # =====================================================\n",
-    "\n",
-    "# optimizer = torch.optim.AdamW(\n",
-    "#     list(student.parameters()) + list(projector.parameters()),\n",
-    "#     lr=lr,\n",
-    "# )\n",
-    "\n",
-    "# num_training_steps = num_epochs * len(train_loader)\n",
-    "# lr_scheduler = get_scheduler(\n",
-    "#     \"linear\",\n",
-    "#     optimizer=optimizer,\n",
-    "#     num_warmup_steps=0,\n",
-    "#     num_training_steps=num_training_steps,\n",
-    "# )\n",
-    "\n",
-    "# # =====================================================\n",
-    "# # 训练循环：双 GPU 蒸馏\n",
-    "# #   - teacher 用 device_map 多卡，只出 logits (+ 可选 hidden)\n",
-    "# #   - student 固定在 cuda:1\n",
-    "# # =====================================================\n",
-    "\n",
-    "# student.train()\n",
-    "# projector.train()\n",
-    "\n",
-    "# progress = tqdm(range(num_training_steps))\n",
-    "\n",
-    "# for epoch in range(num_epochs):\n",
-    "#     for batch in train_loader:\n",
-    "#         # ---------- 0. 保留一份 CPU batch，分别搬到两张卡 ----------\n",
-    "#         batch_cpu = {k: v for k, v in batch.items()}\n",
-    "\n",
-    "#         # ---------- 1. student batch：搬到 cuda:1 ----------\n",
-    "#         batch_student = {\n",
-    "#             k: v.to(student_device, non_blocking=True)\n",
-    "#             for k, v in batch_cpu.items()\n",
-    "#         }\n",
-    "#         attention_mask = batch_student[\"attention_mask\"]\n",
-    "\n",
-    "#         # ---------- 2. teacher forward（固定在 cuda:0，只需要输入/attention_mask） ----------\n",
-    "#         with torch.no_grad():\n",
-    "#             batch_teacher = {\n",
-    "#                 k: v.to(teacher_device, non_blocking=True)\n",
-    "#                 for k, v in batch_cpu.items()\n",
-    "#                 if k in (\"input_ids\", \"attention_mask\")\n",
-    "#             }\n",
-    "#             t_out = teacher(\n",
-    "#                 **batch_teacher,\n",
-    "#                 output_hidden_states=distill_cfg.use_feat_loss,\n",
-    "#                 use_cache=False,\n",
-    "#             )\n",
-    "#             # logits 统一搬到 student 所在的 cuda:1\n",
-    "#             t_logits = t_out.logits.to(student_device, dtype=student_dtype, non_blocking=True)\n",
-    "\n",
-    "#             if distill_cfg.use_feat_loss:\n",
-    "#                 # 只拿最后一层 hidden，减少跨卡通信\n",
-    "#                 t_last_hidden = t_out.hidden_states[-1].to(\n",
-    "#                     student_device,\n",
-    "#                     dtype=student_dtype,\n",
-    "#                     non_blocking=True,\n",
-    "#                 )\n",
-    "#             else:\n",
-    "#                 t_last_hidden = None\n",
-    "\n",
-    "#         # ---------- 3. student forward（cuda:1） ----------\n",
-    "#         s_out = student(\n",
-    "#             **batch_student,\n",
-    "#             output_hidden_states=distill_cfg.use_feat_loss,\n",
-    "#             use_cache=False,\n",
-    "#         )\n",
-    "#         s_logits = s_out.logits\n",
-    "#         if distill_cfg.use_feat_loss:\n",
-    "#             s_last_hidden = s_out.hidden_states[-1]\n",
-    "#         else:\n",
-    "#             s_last_hidden = None\n",
-    "\n",
-    "#         # ---------- 4. 各模块 loss 计算 ----------\n",
-    "#         loss_ce = compute_ce_loss(s_out)\n",
-    "\n",
-    "#         loss_kd = compute_kd_loss(\n",
-    "#             s_logits,\n",
-    "#             t_logits,\n",
-    "#             T=distill_cfg.temperature,\n",
-    "#         )\n",
-    "\n",
-    "#         if distill_cfg.use_feat_loss and t_last_hidden is not None:\n",
-    "#             t_last_proj = projector(t_last_hidden)  # teacher hidden -> student hidden 维度\n",
-    "#             loss_feat = compute_feat_loss(\n",
-    "#                 s_last_hidden,\n",
-    "#                 t_last_proj,\n",
-    "#                 attention_mask=attention_mask,\n",
-    "#             )\n",
-    "#         else:\n",
-    "#             loss_feat = torch.tensor(0.0, device=student_device)\n",
-    "\n",
-    "#         if distill_cfg.use_param_loss and distill_cfg.alpha_param > 0.0:\n",
-    "#             loss_param = compute_param_loss(param_pairs)\n",
-    "#         else:\n",
-    "#             loss_param = torch.tensor(0.0, device=student_device)\n",
-    "\n",
-    "#         # ---------- 5. 总 loss 组合 ----------\n",
-    "#         loss = (\n",
-    "#             loss_ce\n",
-    "#             + distill_cfg.alpha_kd * loss_kd\n",
-    "#             + distill_cfg.alpha_feat * loss_feat\n",
-    "#             + distill_cfg.alpha_param * loss_param\n",
-    "#         )\n",
-    "\n",
-    "#         if torch.isnan(loss):\n",
-    "#             continue\n",
-    "\n",
-    "#         # ---------- 6. 反向 & 更新 ----------\n",
-    "#         optimizer.zero_grad()\n",
-    "#         loss.backward()\n",
-    "#         torch.nn.utils.clip_grad_norm_(student.parameters(), 1.0)\n",
-    "#         optimizer.step()\n",
-    "#         lr_scheduler.step()\n",
-    "\n",
-    "#         # ---------- 7. 进度条 ----------\n",
-    "#         progress.update(1)\n",
-    "#         progress.set_postfix({\n",
-    "#             \"loss\": loss.item(),\n",
-    "#             \"ce\": loss_ce.item(),\n",
-    "#             \"kd\": loss_kd.item(),\n",
-    "#             \"feat\": loss_feat.item(),\n",
-    "#             \"param\": loss_param.item(),\n",
-    "#         })\n",
-    "\n",
-    "# # =====================================================\n",
-    "# # 保存蒸馏后的 MPO 学生\n",
-    "# # =====================================================\n",
-    "# print(compute_ppl_batch(model_0_5b, tokenizer_0_6b, dataset,target_gpu=student_device))\n",
-    "# save_dir = \"distilled_qwen3_0_6b_mpo_kd_modular\"\n",
-    "# student.save_pretrained(save_dir)\n",
-    "# tokenizer.save_pretrained(save_dir)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "a0b0f007",
    "metadata": {},
    "outputs": [],
